# chronofile

./: .copier-answers.yml  .dockerignore  .env  .env.sample  .gitignore  .ruff.toml  CHANGELOG.md  Makefile  README.md  TODO.md  config.toml  df_to_gcal.py  docker-compose.yml  dockerfile  main.py  planning.md  pyproject.toml  pyrightconfig.json  requirements.txt  rescuetime_to_df.py  test.py  update_rescuetime_calendar_api_key.sh
.github/: Dockerfile.dev
.github/.workflows/: run_docker_img.yaml
.github/workflows/: deploy.yml  docker-image.yml  docker_release.yml  release.yml  run.yml  run_docker_img.yml  semver.yml  test.yml
credentials/: credentials.json  token.pickle
src/: df_to_gcal.py  main.py  rescuetime_puller.py  update_google_token.py
src/chronofile/: config.py  diff.py  event.py  main.py  test_diff.py  test_event.py  test_timeline.py  timeline.py
src/chronofile/commands/: sync_logic.py  test_sync.py
src/chronofile/destinations/gcal/: client.py  test_gcal.py
src/chronofile/sources/: activitywatch.py  source.py  test_activitywatch.py
src/input_services/: rescuetime.py
src/output_services/: events_to_calendar_mapper.py
src/output_services/gcal/: calendar_handler.py  converter.py  syncer.py
src/rescuetime2gcal/: __main__.py  _preprocessing.py  cli.py  config.py  diff.py  event.py  main.py  preprocessing.py  rescuetime.py  source_event.py  test_diff.py  test_e2e.py  test_event.py  test_gcal.py  test_main.py  test_preprocessing.py  test_rescuetime.py  test_timeline.py  timeline.py
src/rescuetime2gcal/clients/: activitywatch.py  event_source.py  rescuetime.py  test_activitywatch.py  test_rescuetime.py
src/rescuetime2gcal/clients/gcal/: __init__.py  auth.py  client.py  test_gcal.py
src/rescuetime2gcal/commands/: gcal_auth.py  sync.py  sync_logic.py  test_sync.py
src/rescuetime2gcal/delta/: __init__.py  _deduper.py  test_delta.py
src/rescuetime2gcal/destinations/gcal/: client.py  test_gcal.py
src/rescuetime2gcal/gcal/: auth.py  client.py
src/rescuetime2gcal/sources/: activitywatch.py  rescuetime.py  source.py  source_event.py  test_activitywatch.py  test_rescuetime.py
src/rescuetime2gcal/sources/gcal/: auth.py  client.py  test_gcal.py
src/rescuetime_to_gcal/: __main__.py  _preprocessing.py  activitywatch.py  cli.py  config.py  constants.py  event.py  event_source.py  generic_event.py  main.py  preprocessing.py  processing_steps.py  rescuetime.py  source_event.py  test_activitywatch.py  test_gcal.py  test_main.py  test_preprocessing.py  test_preprocessing_steps.py  test_rescuetime.py
src/rescuetime_to_gcal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rescuetime_to_gcal/clients/: activitywatch.py  event_source.py  rescuetime.py  test_activitywatch.py  test_rescuetime.py
src/rescuetime_to_gcal/clients/gcal/: __init__.py  auth.py  client.py  test_gcal.py
src/rescuetime_to_gcal/delta/: __init__.py  _deduper.py  main.py  test_delta.py
src/rescuetime_to_gcal/gcal/: __init__.py  _deduper.py  auth.py  client.py  converter.py  test_gcal.py
src/rescuetime_to_gcal/input_services/: rescuetime.py
src/rescuetime_to_gcal/output_services/: auth.py  token.pickle
src/rescuetime_to_gcal/output_services/gcal/: syncer.py
src/rescuetime_to_gcal/sources/: activitywatch.py  event_source.py  rescuetime.py  test_activitywatch.py
src/utils/: log.py
