[project]
name = "rescuetime-to-gcal"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Martin Bernstorff", email = "martinbernstorff@gmail.com" }]
dependencies = [
    "gcsa>=2.2.0",
    "pydantic>=2.7.1",
    "typer>=0.12.3",
    "coloredlogs>=15.0.1",
    "iterpy>=1.9.0",
    "pytz>=2024.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rescuetime_to_gcal"]

[project.scripts]
r2s = "rescuetime_to_gcal.cli:app"
