[project]
version = "0.13.4"
requires-python = ">=3.11"
name = "chronofile"
description = ""
dependencies = [
  "coloredlogs>=15.0.1",
  "devtools>=0.12.2",
  "gcsa>=2.3.0",
  "iterpy>=1.9.0",
  "pydantic>=2.7.1",
  "pytz>=2024.1",
  "typer>=0.12.3",
  "toml>=0.10.2",
]

[dependency-groups]
dev = [
  "diff-cover==8.0.3",
  "pyright==1.1.350",
  "pytest==7.4.0",
  "pytest-cov==4.1.0",
  "pytest-testmon==2.1.0",
  "pytest-xdist==3.5.0",
  "pytest-sugar==1.0.0",
  "ruff==0.2.2",
]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/MartinBernstorff/chronofile"
repository = "https://github.com/MartinBernstorff/chronofile"
documentation = "https://MartinBernstorff.github.io/chronofile/"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[project.scripts]
chronofile = "chronofile.main:app"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
